# dwmZ

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.files/fcitx5-patches/: 0001-dbusmodule-add-signals-to-reflect-InputContext-focus.patch  0002-libdbus-arg-for-signal-should-not-have-directions.patch
cmake/: FindLibEv.cmake
fcitx5-dwmzpanel/: CMakeLists.txt
fcitx5-dwmzpanel/src/: CMakeLists.txt  dwmzpanel.conf.in  dwmzpanel.cpp  dwmzpanel.h
include/bar/gc/: colorscheme.hpp  gc.hpp
include/bar/gc/colors/: kanagawa.hpp
include/bar/layout/: wmbar.hpp  zone.hpp
include/fcitxim/: fcitxim.hpp
include/setbg/: png_lanczos.hpp
include/wpvol/: wpvol.hpp
include/ytk/event/: event.hpp  event_types.hpp  registry.hpp
include/ytk/misc/: common.hpp
include/ytk/x/: x.hpp
scripts/: CMakeLists.txt  format.sh  startdwmz.sh
src/: CMakeLists.txt
src/dwmz/: CMakeLists.txt  drw.cpp  dwm.cpp  util.cpp
src/dwmz/include/: drw.hpp  util.hpp
src/fcitximc/: CMakeLists.txt  fcitximc.cpp
src/setdwmzpanel/: CMakeLists.txt  setdwmzpanel.cpp
src/wmbartest/: CMakeLists.txt  wmbartest.cpp
src/wpvolc/: CMakeLists.txt  wpvolc.cpp
